# vivern-editor

./: Cargo.toml  README.md
WEB_TEMPLATE/: index.html  script.js  style.css
src/: graphnode.rs  main.rs  myapp.rs
